[gd_scene load_steps=2 format=3 uid="uid://doav5t27dvtvd"]

[ext_resource type="Script" uid="uid://tbstd0h4b3e2" path="res://ObjectManager.gd" id="1"]

[node name="ObjectManager" type="Node2D"]
script = ExtResource("1")

[node name="Timers" type="Node" parent="."]
unique_name_in_owner = true

[node name="CometTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 2.0

[node name="UFOTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 3.5

[node name="Asteroids" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Planets" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Stars" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Comet" type="Node2D" parent="."]
unique_name_in_owner = true
z_index = 3

[node name="UFOs" type="Node2D" parent="."]
unique_name_in_owner = true
z_index = 3

[connection signal="timeout" from="Timers/CometTimer" to="." method="_on_comet_timer_timeout"]
[connection signal="timeout" from="Timers/UFOTimer" to="." method="_on_ufo_timer_timeout"]
